# Unsupervised_Object_Discovery

./: .gitignore  LICENSE  README.md
nano_files/: undistort_feed.py
nano_files/calibrate/: calibrate.py  capture100.py  package.xml  run_ros_calibrated_camera.py  run_ros_camera.py  test_camera.py
pi_files/: camera1node.py
src/ar_track_alvar/: CMakeLists.txt
src/ar_track_alvar/include/ar_track_alvar/: ConnectedComponents.h  EC.h
src/ar_track_alvar/nodes/: IndividualMarkersNoKinect.cpp  TrainMarkerBundle.cpp
src/discovery_via_interaction/: CMakeLists.txt  package.xml  readme.md
src/discovery_via_interaction/src/: activate.py  object_detector.py  walk_to_location.py
src/discovery_via_interaction/srv/: cupLocation.srv  walkToLocation.srv
src/llm_integration/: ros_log_latest_run.txt  tell_story.py
src/perception/: CMakeLists.txt  package.xml
src/perception/launch/: ar_track.launch
src/perception/src/: get_goal1_transform.py  get_goal2_transform.py  goal_detector.py  object_detector_pc.py
src/plannedctrl/: CMakeLists.txt  package.xml
src/plannedctrl/src/: A_star.py  define_room.py  main_node.py
src/unitree_legged_sdk_from_inside_robot/: CMakeLists.txt  connection.md  setup.py
src/unitree_legged_sdk_from_inside_robot/assets/go1/meshes/: calf_mesh.stl  hip_mesh.stl  thigh_mesh.stl  thigh_mirror_mesh.stl
src/unitree_legged_sdk_from_inside_robot/assets/go1/urdf/: go1.urdf
src/unitree_legged_sdk_from_inside_robot/examples/: cfg_latency.json  example_position.cpp  example_torque.cpp  example_walk.cpp  latency_test.py  latency_test_client.cpp  latency_test_server.cpp  multi_pc_type.h  multi_pc_udp_recv.cpp  multi_pc_udp_send.cpp  plot_data.py  read_position.cpp  stand_up_and_down.cpp
src/unitree_legged_sdk_from_inside_robot/include/python_interface_go1/: real_robot_interface_go1.hpp  real_robot_interface_go1_highlevel.hpp
src/unitree_legged_sdk_from_inside_robot/include/unitree_legged_sdk/: comm_not_working.h  loop.h  safety.h
src/unitree_legged_sdk_from_inside_robot/include/utils/: data_logging.hpp
src/unitree_legged_sdk_from_inside_robot/python_interface_go1/src/: control_loop_deprecated.cpp  python_bindings.cpp  real_robot_interface_go1.cpp  real_robot_interface_go1_highlevel.cpp
src/unitree_legged_sdk_from_inside_robot/python_interface_go1/tests/: test_gym_env_go1.py  test_robot_interface_go1.py  test_robot_interface_go1_highlevel.py  test_stand_up.py
src/unitree_legged_sdk_from_inside_robot/unitree_legged_sdk_python_tools/utils/: data_parsing.py  visualization_raisim.py
src/unitree_ros_to_real/ood_gpssm_msgs/: CMakeLists.txt  package.xml
src/unitree_ros_to_real/ood_gpssm_msgs/msg/: DataCollection.msg  Go1State.msg  Go1StatePredictions.msg
src/unitree_ros_to_real/robots/go1_description/launch/: check_joint.rviz  go1_rviz.launch
src/unitree_ros_to_real/robots/go1_description/urdf/: go1.urdf
src/unitree_ros_to_real/robots/go1_description/xacro/: robot.xacro
src/unitree_ros_to_real/unitree_legged_msgs/msg/: HighState.msg
src/unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt  README.md
src/unitree_ros_to_real/unitree_legged_real/config/: cfg_ros_real_robot_interface_go1_highlevel.yaml  posholder.yaml  posholder_class.yaml
src/unitree_ros_to_real/unitree_legged_real/include/: convert.h  data_parser.hpp  position_holder_control_loop.hpp
src/unitree_ros_to_real/unitree_legged_real/launch/: poshold.launch  rviz.launch  start_robot_interface_highlevel.launch  start_robot_state_creation.launch
src/unitree_ros_to_real/unitree_legged_real/nodes/: position_holder.cpp  position_holder_lcm.cpp  ros_real_robot_interface_go1_highlevel.cpp  stand_up.cpp
src/unitree_ros_to_real/unitree_legged_real/nodes/examples_unitree/: walk_mode_mod.cpp
src/unitree_ros_to_real/unitree_legged_real/nodes/python/: arrow_keys.py  cup_color.py  cup_dist.py  cup_dist_pointcloud.py  cup_dist_tf.py  cup_point_1.py  cup_ray.py  cv_ar_tag.py  motion_playground.py  node_data_collection.py  node_go_to_lowlevel.py  node_ood_detection.py  node_robot_state_creation.py  node_vel_control.py  node_walk_open_loop.py  node_walk_waypoints.py  run_plot_and_join_data.py
src/unitree_ros_to_real/unitree_legged_real/nodes/python/deprecated/: walk_trained_policy_raisim.py  walk_with_vel_profile.py
src/unitree_ros_to_real/unitree_legged_real/nodes/python/test/: test_generate_trajectories.py
src/unitree_ros_to_real/unitree_legged_real/nodes/python/utils/: data_parsing.py  generate_vel_profile.py  min_jerk_gen.py
src/unitree_ros_to_real/unitree_legged_real/src/: position_holder_control_loop.cpp
