<?xml version="1.0"?>

<package format="2">
  <name>ood_gpssm_msgs</name>
  <version>0.0.0</version>
  <description>
    The test messgaes package.
  </description>
  <maintainer email="amarco@berkeley.edu">Alonso Marco</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>